# digmbot-rs

./: Cargo.toml  LICENSE  README.md
src/: config.rs  context.rs  event.rs  handler.rs  helper.rs  llm.rs  logging.rs  main.rs  persistent_state.rs  volatile_state.rs
src/plugin/: debug.rs  help.rs  history.rs  ignore_bots.rs  llm.rs  llm_reply.rs  mod.rs  music.rs  react.rs  ready.rs  reload.rs  rickroll.rs  rivals_rating.rs  vc_notify.rs  xkcd.rs
